# src/router/getTransaction.js
@@ -1,0 +1,11 @@
+import  express  from "express";
+import { getTransaction } from "../controlers/transactions.js";
+
+
+
+
+const getTransactionRouter = express.Router();
+getTransactionRouter.get('/', getTransaction);
+
+
+export default getTransactionRouter;
