# src/router/router.js
@@ -4,14 +4,17 @@ import CheckAuthMiddleware from "../middlewares/checkAuthMidlleware.js";
 import { getUsers } from "../controlers/authcontroler.js";
 import productRouter from "./productsrouter.js";
 import producttypeRouter from "./producttyperouter.js";
+import buyRouter from "./buyRouter.js";
+import getTransactionRouter from "./getTransaction.js";
 
 const router = express.Router();
 router.use("/auth", authRouter);
 
-router.use(CheckAuthMiddleware);
+// router.use(CheckAuthMiddleware);
 router.get('/allUsers',getUsers)
 
 router.use("/product",productRouter);
 router.use("/productType",producttypeRouter);
-
+router.use('/buy',buyRouter);
+router.use('/transactions', getTransactionRouter)
 export default router;
